# OC-Declare

./: .gitignore  README.md  pyproject.toml
src/oc_declare_plug/: __init__.py  plugin.py
src/oc_declare_plug/wheels/: oc_declare-0.1.0-cp313-cp313-manylinux_2_17_x86_64.manylinux2014_x86_64.whl
